@@ -1,3 +1,8 @@
+2012-12-18  KUBO Takehiro  <kubo@jiubao.org>
+	* ext/oci8/error.c, lib/oci8/oci8.rb: change the OCIError constructor to
+	    accept an Oracle error code as the first parameter and create a message
+	    which depends on NLS_LANG.
+
 2012-12-16  KUBO Takehiro  <kubo@jiubao.org>
 	* ext/oci8/extconf.rb, lib/oci8.rb.in: use RUBY_VERSION instead of
 	   RbConfig::CONFIG['ruby_version'] to know the ruby ABI version.
